[package]
name = "winit-test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = {git = "https://github.com/rust-windowing/winit.git"}
ash = "0.32.1"
ash-window = "0.6.0"
gpu-allocator = "0.7.0"
